--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" />
     <link rel="stylesheet" href="style.css">
    <link rel="stylesheet" href="Kajiro Bold.ttf">
+    <link rel="stylesheet" href="Kajiro-Bold.woff">
 </head>
 <body>
     <div id="main">
