--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" />
     <link rel="stylesheet" href="style.css">
-   <link rel="stylesheet" href="Kajiro Bold.ttf">
-    <link rel="stylesheet" href="Kajiro-Bold.woff">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Stint+Ultra+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="main">
